--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,19 +20,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="/webjars/jquery/jquery.min.js"></script>
-        <script src="/webjars/sockjs-client/sockjs.min.js"></script>
-        <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-        <script src="/app.js"></script>
-
+        <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
+        <script src="/webjars/bootstrap/5.1.0/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+        <script src="app.js"></script>
     </head>
-
-
-    
     <body onload="app.init()">
         X:<input id="xValue" type="number"/>
         Y:<input id="yValue" type="number"/>        
-        <button onclick="app.publishPoint(document.getElementById('xValue').value, document.getElementById('yValue').value)">Send point</button>
+        <button id="sendButton", onclick="app.publishPoint(document.getElementById('xValue').value, document.getElementById('yValue').value)">Send point</button>
         <canvas id="canvas" width="800" height="600"></canvas>
     </body>
 </html>
