--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,24 +16,29 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <html>
-    <head>
-        <title>Collab Paint</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
-        <script src="/webjars/bootstrap/5.1.0/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 
-    </head>
-    <body onload="app.init()">
-        <h2>Colaborative Drawing</h2>
-        X:<input id="xValue" type="number"/>
-        Y:<input id="yValue" type="number"/> 
-        <input type="number" id="drawingId" placeholder="ID del dibujo">
-        <button id="connectButton">Conectarse</button>       
-        <button id="sendButton" onclick="app.publishPoint(parseInt(document.getElementById('xValue').value), parseInt(document.getElementById('yValue').value))">Send point</button>
-        <canvas id="canvas" width="800" height="600" style="border:1px solid black;"></canvas>
-        <script src="app.js"></script>
-    </body>
+<head>
+    <title>Collab Paint</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/webjars/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/5.1.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+
+</head>
+
+<body onload="app.init()">
+    <h2>Colaborative Drawing</h2>
+
+    <label>X:</label> <input id="xValue" type="number" />
+    <label>Y:</label> <input id="yValue" type="number" />
+    <input type="number" id="drawingId" placeholder="ID del dibujo">
+    <button onclick="app.connect()">Conectarse</button>
+    <button onclick="app.publishPoint()">Enviar Punto</button>
+
+    <canvas id="canvas" width="800" height="600" style="border:1px solid black;"></canvas>
+    <script src="app.js"></script>
+</body>
+
 </html>
